# reminder_backend

./: .env  .env.development  .env.example  .env.production  .env.testing  .env.vincenzo_test  .gitignore  LICENSE  Procfile  README.md  add_datetime_imports.py  alembic.ini  dbtest.py  docker-compose.yml  fastAPI_pydantic_test.py  license.txt  main.py  package-lock.json  production_remember_note.txt  psw.txt  pyproject.toml  pytest.ini  requirements.txt  start_testing.py  tempCodeRunnerFile.py  test.db  vincenzo_test.db
.ebextensions/: 01_environment.config  02_deploy.config
.elasticbeanstalk/: config.yml
TODO/: half_implemented_vincenzo.md  problems.md  problemsv2.md
alembic/: env.py
app/: __init__.py  config.py  database.py  main.py
docs/: aws_deployment.md  aws_secrets_guide.md  centralized_logger_changes.md  database_architecture.md  error_handling_guide.md  production_remember_note.md  secrets_managment.md  security_checklist.md
env/: .env.development  .env.example  .env.production  .env.testing  README.md
scripts/: admin_setup.example.py  generate_keys.py  manage_secrets.py  start.sh
tests/: README.md  conftest.py  fastAPI_easy_test.py  fastAPI_pydantic_test.py  test_businesses.py  test_db.py  test_users.py
wf_diagrams/: authentication-flowchart.md  authentication-flowchart.mermaid  business-management-flowchart.md  business-management-flowchart.mermaid  claude-flowchart-mixandmatch.md  claude_flowchart_mixandmatch.mermaid  data-integration-flowchart.md  data-integration-flowchart.mermaid  deployment-infrastructure-flowchart.md  pietro.md  (+8 more)
(+123 files in other folders)
