[project]
name = "reminder-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "ipykernel>=6.29.5",
    "mysql>=0.0.3",
    "mysql-connector-python>=9.2.0",
    "mysqlclient>=2.2.7",
    "typing>=3.10.0.0",
    "uvicorn>=0.34.0",
]
